--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,8 @@ img {
 .banner {
     color: #fff;
     background: #3acec2;
-    padding: 5.2em 0;
+    padding-top: 15.2em ;
+    padding-bottom: 5.2em;
     margin-bottom: 30px;
 }
 
@@ -159,6 +160,9 @@ img {
         content: " ";
         display: table;
         clear: both;
+    }
+    .banner{
+        padding-top:5.5em;
     }
 
 }
