--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ img {
 
 .main-nav a {
     font-size: .95em;
-    color: #3acec2;
+    color: teal;
     text-transform: uppercase;
 }
 
@@ -88,7 +88,7 @@ img {
 .banner {
     color: #fff;
     /*background: #3acec2;*/
-    background: radial-gradient(closest-side at 30% 5%, teal, lightblue);
+    background: teal;
     padding-top: 15.2em ;
     padding-bottom: 2.2em;
     margin-bottom: 30px;
