--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ img {
     box-shadow: 0 1px 4px rgba(0,0,0, .7);
 
 }
+.active-tab a{
+    color: #A3B2A0; !important;
+    cursor: default;
+}
 
 .banner,
 .main-footer {
